# albertodonato.net

./: .gitignore  .pre-commit-config.yaml  README.rst  pelicanconf.py  publishconf.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish-gh-pages.yaml
content/pages/: 404.rst  homepage.rst  projects.rst
content/posts/: asyncio-testing.rst  desktop-metapackage.rst  fde-btrfs.rst  python-project-setup.rst  sshuttle-sshoot.rst
plugins/: pagefind_search.py
theme/: Makefile  README.rst  index.html  package-lock.json  package.json  pygments_css.py  style.scss
theme/static/: mode-switcher.js  style.css
theme/static/assets/: pygments-dark.css  pygments-light.css
theme/static/assets/fonts/: fonts.css
theme/templates/: archives.html  article.html  author.html  authors.html  base.html  categories.html  category.html  index.html  page.html  period_archives.html  portfolio.html  tag.html  tags.html
theme/templates/include/: archive_list.html  article_meta.html  css.html  footer.html  header.html  js.html  js_body.html  page_header.html  pages_nav.html  pagination.html  search.html  section_nav.html  simple_analytics.html  tag_list.html  theme_selector.html
theme_scripts/: download_assets.py  render_pygments.py
